--- a/Yuzu/Achievements.html
+++ b/Yuzu/Achievements.html
@@ -25,6 +25,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="Achievements.html">Achievements</a></li>
 					<li><a href="Season Program.html">Season Program</a></li>
+					<li><a href="Recent Developments.html">Recent Developments</a></li>
 				</ul>
 			</nav>
 
