--- a/Yuzu/index.html
+++ b/Yuzu/index.html
@@ -45,7 +45,7 @@
 					<div class="inner">
 						<header>
 							<p>The Most Beautiful</p>
-							<h2>Swan Lack</h2>
+							<h2>Swan Lake</h2>
 						</header>
 					</div>
 				</article>
@@ -54,7 +54,7 @@
 					<div class="inner">
 						<header>
 							<p>Graceful and Lovable</p>
-							<h2>Tne Angle</h2>
+							<h2>Tne Angel</h2>
 						</header>
 					</div>
 				</article>
